--- a/.gitignore
+++ b/.gitignore
@@ -151,3 +151,5 @@ Temporary Items
 # Measures against DMCA Takedown for MMD4Mecanim
 Assets/MMD4Mecanim/
 Assets/MMD4Mecanim.meta
+Assets/Scenes/Common/Models/やきう民/
+Assets/Scenes/Common/Models/やきう民.meta
