--- a/.github/workflows/activation.yml
+++ b/.github/workflows/activation.yml
@@ -6,7 +6,7 @@ name: Acquire activation file
 # events but only for the master branch
 on:
   push:
-    branches: [ master ]
+    branches: [ activation ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
