--- a/.github/workflows/winx64build.yml
+++ b/.github/workflows/winx64build.yml
@@ -49,6 +49,7 @@ jobs:
         with:
           unityVersion: 2020.1.3f1
           targetPlatform: StandaloneWindows64
+          customParameters: -nographics
 
       # Upload build artifacts
       - name: Upload build artifacts
